[gd_scene load_steps=4 format=3 uid="uid://cwoobgghmgbjv"]

[ext_resource type="Script" path="res://achievements.gd" id="1_ji8w8"]
[ext_resource type="Texture2D" uid="uid://d3dd8ffnlv5v1" path="res://square.png" id="2_g1n2f"]
[ext_resource type="Texture2D" uid="uid://c5mui22r1xm4m" path="res://select.png" id="3_lbfq7"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ji8w8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -29.0
offset_top = -31.0
offset_right = 1183.0
offset_bottom = 675.0
color = Color(0.545098, 0.270588, 0.0745098, 1)

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 14.0
offset_right = 272.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 50
text = "Achievements"

[node name="Label2" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 109.0
offset_top = 115.0
offset_right = 996.0
offset_bottom = 184.0
theme_override_font_sizes/font_size = 40
text = "Dynasty 1 - Win three straight championships."
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 109.0
offset_top = 176.0
offset_right = 996.0
offset_bottom = 245.0
theme_override_font_sizes/font_size = 40
text = "Dynasty 2 - Win seven straight championships."
horizontal_alignment = 1

[node name="Label4" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 109.0
offset_top = 232.0
offset_right = 1019.0
offset_bottom = 301.0
theme_override_font_sizes/font_size = 40
text = "Dynasty 3 - Win fifteen straight championships."
horizontal_alignment = 1

[node name="Label5" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 111.0
offset_top = 288.0
offset_right = 1064.0
offset_bottom = 357.0
theme_override_font_sizes/font_size = 40
text = "JV Squad - Win a championship with only FR & SO."
horizontal_alignment = 1

[node name="Label6" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 105.0
offset_top = 341.0
offset_right = 976.0
offset_bottom = 454.0
theme_override_font_sizes/font_size = 40
text = "Recruiting Hotbed - Win a championship with
players from only one state."
horizontal_alignment = 1

[node name="Label7" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 105.0
offset_top = 455.0
offset_right = 1054.0
offset_bottom = 568.0
theme_override_font_sizes/font_size = 40
text = "Start from the Bottom - Win a championship with
a school that started with less than 10 prestige."
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 572.0
offset_right = 755.0
offset_bottom = 635.0
theme_override_font_sizes/font_size = 40
text = "Return to Game"

[node name="Box" type="Sprite2D" parent="."]
position = Vector2(66.5, 147.25)
scale = Vector2(0.0839844, 0.0830078)
texture = ExtResource("2_g1n2f")

[node name="CheckedBox" type="Sprite2D" parent="."]
position = Vector2(67, 147)
scale = Vector2(0.0957031, 0.0957031)
texture = ExtResource("3_lbfq7")

[node name="Box2" type="Sprite2D" parent="."]
position = Vector2(66.5, 208.25)
scale = Vector2(0.0839844, 0.0830078)
texture = ExtResource("2_g1n2f")

[node name="CheckedBox2" type="Sprite2D" parent="."]
position = Vector2(67, 208)
scale = Vector2(0.0957031, 0.0957031)
texture = ExtResource("3_lbfq7")

[node name="Box3" type="Sprite2D" parent="."]
position = Vector2(66.5, 263.25)
scale = Vector2(0.0839844, 0.0830078)
texture = ExtResource("2_g1n2f")

[node name="CheckedBox3" type="Sprite2D" parent="."]
position = Vector2(67, 263)
scale = Vector2(0.0957031, 0.0957031)
texture = ExtResource("3_lbfq7")

[node name="Box4" type="Sprite2D" parent="."]
position = Vector2(66.5, 317.25)
scale = Vector2(0.0839844, 0.0830078)
texture = ExtResource("2_g1n2f")

[node name="CheckedBox4" type="Sprite2D" parent="."]
position = Vector2(67, 317)
scale = Vector2(0.0957031, 0.0957031)
texture = ExtResource("3_lbfq7")

[node name="Box5" type="Sprite2D" parent="."]
position = Vector2(66.5, 371.25)
scale = Vector2(0.0839844, 0.0830078)
texture = ExtResource("2_g1n2f")

[node name="CheckedBox5" type="Sprite2D" parent="."]
position = Vector2(67, 371)
scale = Vector2(0.0957031, 0.0957031)
texture = ExtResource("3_lbfq7")

[node name="Box6" type="Sprite2D" parent="."]
position = Vector2(66.5, 484.25)
scale = Vector2(0.0839844, 0.0830078)
texture = ExtResource("2_g1n2f")

[node name="CheckedBox6" type="Sprite2D" parent="."]
position = Vector2(67, 484)
scale = Vector2(0.0957031, 0.0957031)
texture = ExtResource("3_lbfq7")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
